Further updates for layered shared classes cache
Additional content following #385

- new Java dump output
- new printAllStats and PrintLayerStats output
- updates to descriptions

Closes: #368

Signed-off-by: Sue Chaplain <sue_chaplain@uk.ibm.com>